# cccad-solver

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  reload.sh
docs/: sketch_solver.proto
include/cccad/solver/: constraint_graph.h  constraint_solver.h  sketch_solver_engine.h  sketch_solver_service.h  stage1_solver.h
src/: constraint_graph.cc  constraint_solver.cc  main.cc  sketch_solver_engine.cc  sketch_solver_service.cc  stage1_solver.cc
tests/: validation_tests.cc
